# openshift-scotty

./: .gitignore  Main.hs  README.md  server.cabal
static/: about.html  index.html
static/css/: style.css
