name:          server
version:       0.0
cabal-version: >= 1.2
build-type:    Simple

executable server
  main-is:       Main.hs
  build-depends: base,
                 wai,
                 wai-middleware-static,
                 wai-extra,
                 warp,
                 scotty,
                 data-default,
                 network-conduit,
                 conduit-extra
